# micahsnyder.github.io

./: README.md  _cobalt.yml  index.md  style.css
.github/workflows/: cmake.yml
_includes/: footer.liquid  head.liquid  header.liquid
_layouts/: default.liquid
_site/: index.html  rss.xml
_site/posts/: 01-introduction.html
docs/: CNAME  README.html  index.html  introduction.html  rss.xml  style.css
docs/error_handling_in_c/: sample_test.c
docs/error_handling_in_c_sample_code/: 01-multi-return.c  03-goto-done.c  05-else-if.c  CMakeLists.txt
docs/posts/: 02-error-handling-in-c.html  2020-12-11-01-introduction.html  2020-12-11-02-error-handling-in-c.html  2021-06-05-03-bzip2-project.html  introduction.html
docs/sample_code/: 02-do-while.c  03-goto-done  04-goto-done-do-malloc.c  04-goto-done-with-macros  04-goto-done-with-macros.c  05else-if.c  CMakeLists.txt  do-while.c  goto-done-do-malloc.c  goto-done.c
docs/sample_code/error_handling_in_c/: 01_multi_return.c  04_goto_done_with_macros.c  05_else_if.c  sample_test.c  sample_test.h
posts/: 01-introduction.md  02-error-handling-in-c.md  2020-12-11-01-introduction.md  2020-12-11-02-error-handling-in-c.md  2021-06-05-03-bzip2-project.md
sample_code/: do-while.c  else-if.c  goto-done.c  multi-return.c
sample_code/error_handling_in_c/: 02_do_while.c  CMakeLists.txt
